--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,3 +6,4 @@ url: https://thijzert123.github.io/homewizard4j
 
 aux_links:
   GitHub Repository: https://github.com/Thijzert123/homewizard4j
+  Javadoc: https://javadoc.io/doc/io.github.thijzert123/homewizard4j
