--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,8 +11,10 @@ name: Java CI with Maven
 on:
   push:
     branches: [ "main" ]
+    paths: [ "src/**" ]
   pull_request:
     branches: [ "main" ]
+    paths: [ "src/**" ]
 
 jobs:
   build:
