--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,5 +10,5 @@ aux_links:
   GitHub Repository: https://github.com/Thijzert123/homewizard4j
 
 nav_external_links:
-  - title: HomeWizard official API
+  - title: Official HomeWizard API documentation
     url: https://api-documentation.homewizard.com
