--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <publishingServerId>central</publishingServerId>
+                    <deploymentName>${project.artifactId} ${project.version}</deploymentName>
                 </configuration>
             </plugin>
         </plugins>
