--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,10 +11,9 @@ name: Java CI with Maven
 on:
   push:
     branches: [ "main" ]
-    paths: [ "src/**" ]
+    paths: [ "src/**", "pom.xml" ]
   pull_request:
     branches: [ "main" ]
-    paths: [ "src/**" ]
 
 jobs:
   build:
