--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,3 +12,5 @@ aux_links:
 nav_external_links:
   - title: Official HomeWizard API documentation
     url: https://api-documentation.homewizard.com
+
+ga_tracking: G-LZJCXP08N0
